# monero-zkVM-prover

./: Cargo.toml  deploy-akash.yaml  pyproject.toml
.github/workflows/: docker-build-gpu.yml
docs/: SEGMENT_VERIFICATION.md
examples/: README.md  basic_usage.py  integration_example.py  segment_proving.py
host/: Cargo.toml
host/src/: lib.rs  main.rs  randomx_vm.rs
methods/guest/: Cargo.toml
methods/guest/src/: lib.rs
methods/guest/src/randomx/: config.rs  program.rs  softfloat.rs
methods/phase2-program/: Cargo.toml
methods/phase2-program/src/: main.rs
python/: Cargo.toml
python/src/: lib.rs
