[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "monero-zkvm-prover"
version = "0.1.0"
description = "Python bindings for Monero RandomX zkVM Prover"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["monero", "zkvm", "zk-proof", "randomx", "risc0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.urls]
Repository = "https://github.com/your-username/monero-zkvm-prover"

[tool.maturin]
manifest-path = "python/Cargo.toml"
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "monero_zkvm_prover"
