[package]
name = "phase2-program"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde-big-array = { version = "0.5", default-features = false }
# Depend on the guest library for shared RandomX code
guest = { path = "../guest" }
# Use patched sha2 for accelerated SHA-256 with standard byte format
sha2 = { version = "=0.10.8", default-features = false }

[patch.crates-io]
# RISC0's patched sha2 crate that uses the SHA-256 precompile
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }

[profile.release]
opt-level = 3
lto = true
